-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 9
-
Component/s: core-libs
-
b15
-
x86_64, sparc_64
-
solaris_11
-
Not verified
These failures were spotted in an Aurora Adhoc job.
java/net/MulticastSocket/SetGetNetworkInterfaceTest.java
java/net/NetworkInterface/Equals.java
java/net/NetworkInterface/NetParamsTest.java
java/net/NetworkInterface/Test.java
java/net/NetworkInterface/UniqueMacAddressesTest.java
These test failed due to "java.net.SocketException: Couldn't obtain phys addr".
java/net/MulticastSocket/SetGetNetworkInterfaceTest.java
java/net/NetworkInterface/Equals.java
java/net/NetworkInterface/NetParamsTest.java
java/net/NetworkInterface/Test.java
java/net/NetworkInterface/UniqueMacAddressesTest.java
These test failed due to "java.net.SocketException: Couldn't obtain phys addr".
- relates to
-
JDK-8134990 javax/net/ssl/TLS/TestJSSE.java failed due to several exceptions
-
- Closed
-