8059309: network tests fail with "java.net.SocketException: Couldn't obtain phys addr" when run as "root"

The solaris specific code is changed to use the fallback mechanism if the DLPI interface returns an error indicating that the operation is unsupported. In addition, NetworkInterface::getHardwareAddress is changed to always return null for the loopback interface.

Reviewed-by: alanb